--- a/styles/index_main.module.css
+++ b/styles/index_main.module.css
@@ -172,6 +172,7 @@
         font-size: 12.5px;
         line-height:16px;
         text-align: center;
+        font-weight: 500;
     }
     div.main__menu_nav_block_image {
         /* width:54px;
