--- a/styles/globals.css
+++ b/styles/globals.css
@@ -335,6 +335,7 @@ p.nav > a {
       --confirm_block:hsl(240, 2%, 18%);
       --search_back:hsl(240, 2%, 18%);
       --search-block: hsl(240, 2%, 28%);
+      --brand_back:hsl(241, 100%, 74%);
   }
 }
 @media (prefers-color-scheme: light) {
@@ -368,6 +369,7 @@ p.nav > a {
       --confirm_block:hsl(0, 0%, 100%);
       --search_back:hsl(0, 0%, 100%);
       --search-block: hsl(210, 7%, 95%);
+      --brand_back:hsl(248, 57%, 59%);
   }
 }
 .sup {
@@ -383,7 +385,7 @@ p.nav > a {
   background-color: var(--sub_content);
 }
 .brand_background {
-  background-color: var(--brand-color);
+  background-color: var(--brand_back);
 }
 .green_background {
   background-color: var(--green_back);
