--- a/styles/constructor/index.module.css
+++ b/styles/constructor/index.module.css
@@ -1,17 +1,19 @@
 div.main__module_row {
     margin:32px 0;
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap:32px;
 }
 div.main__module_row_block {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     cursor: pointer;
 }
 div.main__module_row_block_img {
     width:60px;
     height:60px;
-    /* background-color: var(--nav_menu_c); */
     border-radius: 13px;
     margin-right: 16px;
     position: relative;
@@ -22,9 +24,16 @@ img.main__module_row_block_pic {
     border-radius: 13px;
 }
 div.main__module_row_block_f  {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 p.main__module_row_block_f_p {
     font-size:12px;
