--- a/styles/search_block.module.css
+++ b/styles/search_block.module.css
@@ -1,7 +1,8 @@
 div.search__block {
-    /* width:280px; */
     height:58px;
     background-color: var(--search-block);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin:4px 8px 4px 0;
     border-radius: 13px;
@@ -12,9 +13,15 @@ div.search__block_image {
     width: 38px;
     height: 38px;
     border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 div.search__block_pic {
     width: 26px;
@@ -26,9 +33,15 @@ div.search__block_image_s {
     width: 38px;
     height: 38px;
     border-radius: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: relative;
 }
 img.search__block_image_i {
@@ -37,10 +50,18 @@ img.search__block_image_i {
     border-radius: 10px;
 }
 div.search__block_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-overflow: ellipsis;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -o-text-overflow: ellipsis;
+       text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
